# resume-display-backend

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_initial_schema.sql  002_single_resume_table.sql
src/: config.rs  lib.rs  main.rs  server.rs
src/cli/: commands.rs
src/db/: pool.rs  queries.rs
src/handlers/: resume.rs
src/models/: certificate.rs  education.rs  experience.rs  language.rs  mod.rs  personal_info.rs  project.rs  resume.rs  skill.rs
